wrapped image to control its dimensions correctly

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,7 +1,7 @@
 .Logo{
     background-color: white;
     padding: 8px;
-    height: 80%;
+    height: 100%;
     box-sizing: border-box; /*the 80%height also includes the padding*/
     border-radius: 5px
 }
