--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -1,6 +1,6 @@
 .SideDrawer{
     position: fixed;
-    width: 2px;
+    width: 200px;
     max-width: 70%;
     height: 100%;
     left:0;
@@ -12,7 +12,7 @@
     transition: transform 0.3s ease-out;
 }
 
-@media (min-width:500px){
+@media (min-width:500px){/*sidedrawer NOT shown when width>500px*/
     .SideDrawer{
         display: none;
     }
@@ -24,4 +24,8 @@
 
 .Close{
     transform: translateX(-100%)
+}
+
+.Logo {
+    height: 11%;
 }
