--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -18,3 +18,7 @@
 .Toolbar nav{
     height: 100%;
 }
+
+.Logo {
+    height: 80%;
+}
